# taskwarrior-schedule

./: .coverage  .gitignore  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/schedule-tui/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: schedule-tui.md
src/schedule/: __init__.py  app.py  app.tcss  config.py  main.py  taskwarrior.py
src/schedule/widgets/: __init__.py  custom_header.py  report_modal.py  task_table.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_config.py  test_custom_header.py  test_report_modal.py  test_taskwarrior.py  test_utils.py
